array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nb=0
  var a=num[0]
  var b=0
  for (i <- num){
    b=i
    if (a<b)
    {nb=nb+1
    }
    a=b
  }
  return nb


}

